src/index.css
@import "tailwindcss";
@font-face {
    font-family: "Akumaru";
    src: url("/src/assets/AKUMARU-PersonalUse.woff2") format("woff2");
    font-display: swap;
}

* {
    margin: 0;
    box-sizing: border-box;
}

html {
    overflow-x: hidden;
}

body {
    overflow-x: hidden;
    background-image: url("/background.webp");
}

img {
  will-change: transform;
}

